# visual_servoing

./: .gitignore  CMakeLists.txt  PINCER_HOUSING2_EDIT_Larger_Tag.blend  README.md  config.hjson  default.rviz  keyboard_ik_demo.py  launch.json  package.xml  pbvs_demo.py  points_and_sdf.pkl  realsense_tag_detection.py  requirements.txt  robot_points.pkl  setup.py  short_floor.urdf  utils.py  val.py
AR Tag Cuff/: PINCER_HOUSING2_EDIT.blend  PINCER_HOUSING2_EDIT.blend1  PINCER_HOUSING2_EDIT.mtl  PINCER_HOUSING2_EDIT_Larger_Tag.blend  PINCER_HOUSING2_EDIT_Larger_Tag.blend1  PINCER_HOUSING2_EDIT_Larger_Tag.mtl
AR Tag Static/: box.blend  box.blend1  box.mtl
Grid Tags/: Grid_better.xcf  PINCER_HOUSING2.xcf  PINCER_HOUSING2_EDIT_Multi_Tag.blend  PINCER_HOUSING2_EDIT_Multi_Tag.blend1
Larger Tag/: PINCER_HOUSING2_EDIT_Larger_Tag.blend1
deprecated/: aruco.py  pbvs_demo.py  qp_greedy.py
launch/: real_val.launch  real_val.rviz  rope.launch  rviz_val.launch  rviz_victor.launch  val.rviz  walls.world
models/hdt_michigan_description_orig/: package.xml
models/hdt_michigan_description_orig/meshes/: MK4_MT.STL  PINCER_HOUSING.STL
models/hdt_michigan_description_orig/urdf/: hdt_michigan_backup.xacro  left_gripper.urdf
scripts/: .generate_gt.py.swp  .pbvs_demo.py.swp  dynamics_debug.py  evaluation.py  generate_gt.py  gt_pbvs_demo.py  icp_pbvs_demo.py  icp_sim.py  marker_pbvs_demo.py  pbvs_demo.py  playback.py  real_evaluation.py  real_pbvs_demo.py  real_val.py  realsense_tag_detection.py  rope_vs.py  sandbox.py  zed.py
src/: camera.py  pbvs.py  utils.py  val.py
(+122 files in other folders)
